force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__BorderedTable__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__BorderedTable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check for borders on all sides of the table and cells</inlineHelpText>
    <label>Bordered table</label>
    <type>Checkbox</type>
</CustomField>