force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__DateFilter__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__DateFilter__c</fullName>
    <inlineHelpText>Define by which date or date/time field (API name) the user can filter records for. If this field is null then date filter functionality will be hidden.</inlineHelpText>
    <label>Date Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>