force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__DisplayRecordsPerPage__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__DisplayRecordsPerPage__c</fullName>
    <label>Display Records Per Page</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Top</fullName>
            </value>
            <value>
                <fullName>Bottom</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>