force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__FieldSet__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__FieldSet__c</fullName>
    <inlineHelpText>Define which columns (field API names separated by comma) are going to be display and in which order. You may include any field from the related object setting but not fields from a relationship.</inlineHelpText>
    <label>FieldSet</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>