force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__HideHeader__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__HideHeader__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to hide the list view&#39;s header</inlineHelpText>
    <label>Hide Header</label>
    <type>Checkbox</type>
</CustomField>