force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__HideSearch__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__HideSearch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Search</label>
    <type>Checkbox</type>
</CustomField>