force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__HoverRows__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__HoverRows__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to make tables more compact by cutting cell padding in half</inlineHelpText>
    <label>Hover rows</label>
    <type>Checkbox</type>
</CustomField>