force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__LabelDateFilterFrom__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__LabelDateFilterFrom__c</fullName>
    <defaultValue>&#39;ListView_DateFilterFrom&#39;</defaultValue>
    <label>Label Date Filter From</label>
    <length>80</length>
    <type>Text</type>
</CustomField>