force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__LabelDateFilterSearchButton__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__LabelDateFilterSearchButton__c</fullName>
    <label>Label Date Filter Search Button</label>
    <length>80</length>
    <type>Text</type>
</CustomField>