force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__LabelDateFilterTo__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__LabelDateFilterTo__c</fullName>
    <defaultValue>&#39;ListView_DateFilterTo&#39;</defaultValue>
    <label>Label Date Filter To</label>
    <length>80</length>
    <type>Text</type>
</CustomField>