force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__LabelEmptyList__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__LabelEmptyList__c</fullName>
    <defaultValue>&#39;ListView_NoRecords&#39;</defaultValue>
    <label>Label Empty List</label>
    <length>100</length>
    <type>Text</type>
</CustomField>