force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__LabelNewAction__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__LabelNewAction__c</fullName>
    <defaultValue>&#39;ListView_New&#39;</defaultValue>
    <label>Label New Action</label>
    <length>100</length>
    <type>Text</type>
</CustomField>