force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__LabelViewName__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__LabelViewName__c</fullName>
    <inlineHelpText>The View name label replaces the view name within the related views picklist</inlineHelpText>
    <label>Label View Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>