force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__Navigation__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__Navigation__c</fullName>
    <label>Navigation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Navigate</fullName>
                <default>true</default>
                <label>Navigate</label>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>No page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>