force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__Object__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__Object__c</fullName>
    <formula>IF(NOT(ISBLANK(FieloCRUD__ObjectSettings__c)), FieloCRUD__ObjectSettings__r.FieloCRUD__ObjectAPIName__c, FieloCRUD__RelatedListObjectAPIName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object</label>
    <type>Text</type>
</CustomField>