force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__ObjectSettings__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ObjectSettings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Object Settings</label>
    <referenceTo>FieloCRUD__ObjectSettings__c</referenceTo>
    <relationshipLabel>List Views</relationshipLabel>
    <relationshipName>ListViews</relationshipName>
    <type>Lookup</type>
</CustomField>