force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__PageLayout__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__PageLayout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Page Layout</label>
    <referenceTo>FieloCRUD__PageLayout__c</referenceTo>
    <relationshipLabel>Related Lists</relationshipLabel>
    <relationshipName>RelatedLists</relationshipName>
    <type>Lookup</type>
</CustomField>