force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__ParentField__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ParentField__c</fullName>
    <inlineHelpText>Complete with the API name of the lookup field that relates the object defined on "Related List Object API Name" with the object setting of the page layout.</inlineHelpText>
    <label>Parent Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>