force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__ProxyDateFrom__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ProxyDateFrom__c</fullName>
    <label>VF Proxy Date From</label>
    <type>Date</type>
</CustomField>