force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__ProxyDateTo__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ProxyDateTo__c</fullName>
    <label>VF Proxy Date To</label>
    <type>Date</type>
</CustomField>