force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__RelatedListObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__RelatedListObjectAPIName__c</fullName>
    <inlineHelpText>Complete with the Object API name of the records that you want to display on the related list.</inlineHelpText>
    <label>Related List Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>