force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__ScrollRows__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ScrollRows__c</fullName>
    <label>Scroll Rows</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>