force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__ScrollTable__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ScrollTable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scroll Table</label>
    <type>Checkbox</type>
</CustomField>