force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__SearchFields__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__SearchFields__c</fullName>
    <description>Works only with Text Fields</description>
    <inlineHelpText>Define by which fields (API names separated by comma) the user can search records for. If this field is null then search functionality will be hidden.</inlineHelpText>
    <label>Search Fields</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>