force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__SiteName__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__SiteName__c</fullName>
    <inlineHelpText>The site name replaces the object plural name (for related lists).</inlineHelpText>
    <label>Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>