force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__StripedRows__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__StripedRows__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to add zebra-striping to any table row</inlineHelpText>
    <label>Striped rows</label>
    <type>Checkbox</type>
</CustomField>