force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__ViewName__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ViewName__c</fullName>
    <inlineHelpText>The view name replaces the list name within the related views picklist.</inlineHelpText>
    <label>View Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>