force-app/main/default/objects/FieloCRUD__ListView__c/fields/FieloCRUD__WhereCondition__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__WhereCondition__c</fullName>
    <inlineHelpText>Define your WHERE condition clause. You may include fields; ORDER BY and LIMIT clauses; and variables for Member Id, Account Id, Contact Id, UserId (ex. Member__c =: memberId)</inlineHelpText>
    <label>Where Condition</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>