force-app/main/default/objects/FieloCRUD__ListView__c/recordTypes/FieloCRUD__Attachment.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__Attachment</fullName>
    <active>true</active>
    <description>Is a related list of files that have been uploaded.</description>
    <label>Attachment</label>
</RecordType>