force-app/main/default/objects/FieloCRUD__ListView__c/recordTypes/FieloCRUD__ListView.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__ListView</fullName>
    <active>true</active>
    <description>List that displays records from a custom object.</description>
    <label>List View</label>
</RecordType>