force-app/main/default/objects/FieloCRUD__ListView__c/recordTypes/FieloCRUD__RelatedList.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__RelatedList</fullName>
    <active>true</active>
    <description>List that displays records from a custom object that are related to a particular custom object.</description>
    <label>Related List</label>
</RecordType>