force-app/main/default/objects/FieloCRUD__ListView__c/validationRules/FieloCRUD__Fielo_ListView_ScrollRowsCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCRUD__Fielo_ListView_ScrollRowsCheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(FieloCRUD__ScrollTable__c) ,  NOT(ISNULL(FieloCRUD__ScrollRows__c)) )</errorConditionFormula>
    <errorDisplayField>FieloCRUD__ScrollTable__c</errorDisplayField>
    <errorMessage>In order to set scroll rows, scroll table must be checked</errorMessage>
</ValidationRule>