force-app/main/default/objects/FieloCRUD__ListView__c/validationRules/FieloCRUD__ListView_ObjectSettingMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCRUD__ListView_ObjectSettingMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
	AND(RecordType.DeveloperName = "List",ISBLANK(FieloCRUD__ObjectSettings__c  )),
	TRUE,
	FALSE
)</errorConditionFormula>
    <errorDisplayField>FieloCRUD__ObjectSettings__c</errorDisplayField>
    <errorMessage>You must include an object setting for Lists with "List View" record type.</errorMessage>
</ValidationRule>