force-app/main/default/objects/FieloCRUD__ListView__c/validationRules/FieloCRUD__ListView_PageSizeValidValues.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCRUD__ListView_PageSizeValidValues</fullName>
    <active>true</active>
    <errorConditionFormula>FieloCRUD__PageSize__c &lt; 1  || FieloCRUD__PageSize__c &gt; 100</errorConditionFormula>
    <errorDisplayField>FieloCRUD__PageSize__c</errorDisplayField>
    <errorMessage>Page Size must be between 1 and 100.</errorMessage>
</ValidationRule>